# moq

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.jsonc  bun.lockb  flake.nix  justfile  package.json
.claude/: settings.json
.github/workflows/: check.yml  docker.yml  libmoq.yml  release.yml
cdn/: flake.nix
dev/: relay.toml
docs/observability/: IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  metrics.md  metrics_checklist.md
js/clock/: package.json
js/hang/: package.json
js/hang-demo/: package.json
js/hang-demo/src/: config.ts  index.html  index.ts  support.html
js/hang-ui/: README.md  package.json  rollup.config.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
js/hang-ui/src/publish/: element.tsx  index.tsx
js/hang-ui/src/watch/: element.tsx  index.tsx
js/hang/src/: frame.ts  index.ts  worklet.d.ts
js/hang/src/catalog/: audio.ts  container.ts  video.ts
js/hang/src/container/: codec.ts
js/hang/src/meet/: room.ts
js/hang/src/observability/: index.ts
js/lite/: package.json
js/lite/examples/: connection.ts  discovery.ts  publish.ts
js/lite/src/: index.ts  time.ts
js/signals/: package.json
js/token/: package.json
js/token/src/: key.test.ts  key.ts
nix/: overlay.nix
nix/modules/: moq-relay.nix
observability/: PLAN.md  README.md  alerts.yml  alloy-config.alloy  docker-compose.yml  import-dashboards.sh  otel-collector-config.yaml  prometheus.yml  recording_rules.yml  tempo-config.yaml
observability/grafana/dashboards/: moq-overview.json  moq-pipeline.json
rs/: justfile
rs/hang/: CHANGELOG.md  Cargo.toml
rs/hang-cli/: CHANGELOG.md  Cargo.toml
rs/hang-cli/examples/: hls_ingest.rs
rs/hang-cli/src/: client.rs  hls.rs  import.rs  main.rs  publish.rs  server.rs  web.rs
rs/hang/examples/: video.rs
rs/hang/src/: error.rs  hls.rs  lib.rs
rs/hang/src/catalog/: container.rs  mod.rs  root.rs
rs/hang/src/catalog/audio/: mod.rs
rs/hang/src/catalog/video/: codec.rs  h264.rs  mod.rs
rs/hang/src/cmaf/: hls.rs  import.rs  mod.rs
rs/hang/src/import/: aac.rs  atom_reader.rs  avc3.rs  decoder.rs  fmp4.rs  hev1.rs  hls.rs  mod.rs  opus.rs
rs/hang/src/import/manifest/: hls.rs  mod.rs
rs/hang/src/import/media/: aac.rs  annexb.rs  fmp4.rs  mod.rs
rs/hang/src/model/: broadcast.rs  frame.rs  group.rs  mod.rs  track.rs
rs/libmoq/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh
rs/libmoq/cmake/: moq-config-version.cmake.in  moq-config.cmake.in
rs/libmoq/src/: api.rs  consume.rs  error.rs  ffi.rs  id.rs  lib.rs  origin.rs  session.rs  state.rs
rs/moq/: CHANGELOG.md  Cargo.toml
rs/moq-clock/: CHANGELOG.md  Cargo.toml
rs/moq-clock/src/: main.rs
rs/moq-lite/: CHANGELOG.md  Cargo.toml
rs/moq-lite/src/: error.rs  lib.rs  path.rs  session.rs  stats.rs
rs/moq-native/: CHANGELOG.md  Cargo.toml
rs/moq-native/examples/: chat.rs
rs/moq-native/src/: client.rs  iroh.rs  lib.rs  log.rs  qlog.rs  server.rs
rs/moq-relay/: Cargo.toml  README.md
rs/moq-relay/src/: auth.rs  cluster.rs  config.rs  connection.rs  main.rs  metrics.rs  observability.rs  observability_config.rs  web.rs
rs/moq-token/: Cargo.toml  README.md
rs/moq-token-cli/: CHANGELOG.md  Cargo.toml
rs/moq-token/src/: claims.rs  key.rs  lib.rs
(+151 files in other folders)
