[package]
name = "moq-relay"
description = "Media over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.10.2"
edition = "2024"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[[bin]]
name = "moq-relay"
path = "src/main.rs"
doc = false

[features]
default = ["iroh"]
iroh = ["moq-native/iroh"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.8", features = ["tokio", "ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
http-body = "1"
moq-lite = { workspace = true, features = ["serde"] }
moq-native = { workspace = true, features = ["aws-lc-rs"] }
moq-token = { workspace = true }
rustls = { version = "0.23", features = [
	"aws-lc-rs",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["json", "base64"] }
thiserror = "2"
tokio = { workspace = true, features = ["full"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["trace", "metrics", "logs", "tonic"] }
# opentelemetry-semantic-conventions = "0.16"  # TODO: Re-enable once API compatibility is resolved
url = { version = "2", features = ["serde"] }
web-transport-ws = { workspace = true }

[target.'cfg(unix)'.dependencies]
sd-notify = "0.4"

[features]
tokio-console = ["dep:console-subscriber"]

[dependencies.console-subscriber]
version = "0.5"
optional = true

[dev-dependencies]
tempfile = "3"
